# Salmon_lice_simulator

./: .gitignore  LICENSE  README.md  Test_run.py  Test_run_CF_eff.py  Test_run_automatic_treat.py  Test_run_diff_treatment_threshold.py  Test_run_varible_L0.py  requirements.txt  setup.cfg
Simulator_engine/: Farm.py  Lice_agent.py  Lice_agent_female.py  Lice_agent_male.py  Planktonic_agent.py  System.py  System_3_FO.py  Treatments.py  __init__.py  run_sim.py  run_sim_test.py
