[metadata]

name = Simulator_engine
version = 0.1.3
description = Salmon lice population dynamic model
keywords = population dynamics, connectivity, cohort-based modelling
Home_page = https://github.com/TrondurJK/Salmon_lice_simulator
author = Tróndur JK, Tróndur TJ
author_email = trondurk@fiskaaling.fo
Classifiers =
    Environment :: Console (Text Based)
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Mathematical biology

[options]
packages = find:
python_requires = >=3.7
install_requires =
    matplotlib
    numpy
    pandas
    scipy
